--- a/assets/index.html
+++ b/assets/index.html
@@ -1,5 +1,10 @@
 <html>
     <body>
-        <h1>HelloWorld</h1>
+        <div id="sidebar_left">
+        </div>
+        <div id="content">
+        </div>
+        <div id="sidebar_right">
+        </div>
     </body>
 </html>
