--- a/gui/frontend/index.html
+++ b/gui/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Distrox</title>
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link data-trunk rel="css" href="/public/main.css"/>
   </head>
   <body></body>
 </html>
